Added sessions for client tracking

--- a/src/main/resources/templates/client.html
+++ b/src/main/resources/templates/client.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 uploaded, hopefully it works!
-<form th:action="@{/upload}" method="post">
+<form th:action="@{/connect}" method="post">
     <button type="submit">Start SFTP</button>
     <input type="text" name="username" placeholder="Your name">
     <input type="password" name="password" placeholder="Your name">
