--- a/src/main/resources/templates/users-list.html
+++ b/src/main/resources/templates/users-list.html
@@ -18,7 +18,7 @@
     <tr><td colspan="2">Loading…</td></tr>
     </tbody>
 </table>
-
+<p th:text="${message}"></p>
 <script defer th:src="@{/js/users-list.js}"></script>
 </body>
 </html>
